HW_2/05-k8s-ingress-configmaps-secrets/manifests/04-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bish-gateway-deployment
  labels:
    app: bish-gateway
    author: bishwayan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bish-gateway
  template:
    metadata:
      labels:
        app: bish-gateway
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: bish-file-config
      containers:
        - name: gateway-container
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/bish-config
              readOnly: true
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
