HW_2/05-k8s-ingress-configmaps-secrets/manifests/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bish-gateway-svc
  labels:
    app: bish-gateway
    author: bishwayan
spec:
  type: ClusterIP
  selector:
    app: bish-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
