HW_2/05-k8s-ingress-configmaps-secrets/manifests/06-ingress-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bish-gateway-ingress
  labels:
    app: bish-gateway
    author: bishwayan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.internal.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bish-gateway-svc
                port:
                  number: 80
